--- a/WebHeroes/Views/Game/_SpellBook.cshtml
+++ b/WebHeroes/Views/Game/_SpellBook.cshtml
@@ -1,5 +1,5 @@
-﻿@using WebHeroes.Models;
-@using Action = WebHeroes.Code.Action;
+﻿@using WebHeroes.Entities;
+@using Action = WebHeroes.Actions.Action;
 @model List<Action>
 @{
     string ErrorMessage = ViewBag.ErrorMessage;
