--- a/WebHeroes/Views/Shared/_Layout.cshtml
+++ b/WebHeroes/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @*@Styles.Render("~/Content/css")*@
+    @*@Styles.Render("~/Content/hexagons.css")*@
     @Scripts.Render("~/bundles/modernizr")
     <style>
         body{
@@ -60,7 +60,7 @@
 
         $(document).ready(function () {
             $('#boardArea').load('@Url.Action("Input", "Game")');
-            $('#spellBookArea').load('@Url.Action("SpellBook", "Game")')
+            //$('#spellBookArea').load('@Url.Action("SpellBook", "Game")')
 
             $('#skip').click(function () {
                 $('#boardArea').load('@Url.Action("Input","Game")?input=skip')
